# mattdies

./: .gitignore  README.md  pyproject.toml
dev_env/: .gitrepo  Dockerfile  README.md  devcontainer.json  docker_compose.yaml  init_funcs.py
mattdies/: check_vpn.py  gen_funcs.py  subtitles.py
src/mattdies/: check_vpn.py  remove_subs.py
