[tool.poetry]
name = "mattdies"
version = "0.1.0"
description = "My personal collection of useful code."
authors = ["Matt Dies <matthewkdies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
qbittorrent-api = "^2022.8.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0301", # line-too-long
    "C0114", # missing-module-docstring
    "W0105", # pointless-string-statement
]
