[tool.poetry]
name = "mattdies"
version = "0.1.0"
description = "My personal collection of useful code."
authors = ["Matt Dies <matthewkdies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.downloads.dependencies]
qbittorrent-api = "^2023.2.43"


[tool.poetry.group.subs.dependencies]
requests-cache = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0301", # line-too-long
    "C0114", # missing-module-docstring
    "W0105", # pointless-string-statement
]

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88
